uccompiler/y.output
Terminals unused in grammar

    RESERVED
    SUB
    ADD


Grammar

    0 $accept: Program $end

    1 Program: error
    2        | FunctionsAndDeclarations

    3 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarations2
    4                         | FunctionDeclaration FunctionsAndDeclarations2
    5                         | Declaration FunctionsAndDeclarations2

    6 FunctionsAndDeclarations2: ε
    7                          | FunctionDefinition FunctionsAndDeclarations2
    8                          | FunctionDeclaration FunctionsAndDeclarations2
    9                          | Declaration FunctionsAndDeclarations2

   10 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

   11 FunctionBody: LBRACE RBRACE
   12             | LBRACE DeclarationsAndStatements RBRACE

   13 DeclarationsAndStatements: StatementsERROR DeclarationsAndStatements
   14                          | Declaration DeclarationsAndStatements
   15                          | StatementsERROR
   16                          | Declaration

   17 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   18 FunctionDeclarator: IDENTIFIER LPAR ParameterList RPAR

   19 ParameterList: ParameterDeclaration ParameterList2

   20 ParameterList2: ε
   21               | COMMA ParameterDeclaration ParameterList2

   22 ParameterDeclaration: TypeSpec
   23                     | TypeSpec IDENTIFIER

   24 Declaration: TypeSpec Declaration2 SEMI
   25            | error SEMI

   26 Declaration2: Declarator
   27             | Declaration2 COMMA Declarator

   28 TypeSpec: CHAR
   29         | INT
   30         | VOID
   31         | SHORT
   32         | DOUBLE

   33 Declarator: IDENTIFIER
   34           | IDENTIFIER ASSIGN Expr2

   35 StatementsERROR: SEMI
   36                | Expr2 SEMI
   37                | LBRACE Statement2 RBRACE
   38                | IF LPAR Expr2 RPAR StatementERROR ELSE StatementERROR
   39                | IF LPAR Expr2 RPAR StatementERROR
   40                | WHILE LPAR Expr2 RPAR StatementERROR
   41                | RETURN Expr2 SEMI
   42                | RETURN SEMI
   43                | LBRACE error RBRACE

   44 StatementERROR: SEMI
   45               | Expr2 SEMI
   46               | LBRACE Statement2 RBRACE
   47               | IF LPAR Expr2 RPAR StatementERROR ELSE StatementERROR
   48               | IF LPAR Expr2 RPAR StatementERROR
   49               | WHILE LPAR Expr2 RPAR StatementERROR
   50               | RETURN Expr2 SEMI
   51               | RETURN SEMI
   52               | LBRACE error RBRACE
   53               | error SEMI

   54 Statement2: ε
   55           | StatementERROR Statement3

   56 Statement3: ε
   57           | StatementERROR Statement3

   58 Expr: Expr ASSIGN Expr
   59     | Expr PLUS Expr
   60     | Expr MINUS Expr
   61     | Expr MUL Expr
   62     | Expr DIV Expr
   63     | Expr MOD Expr
   64     | Expr OR Expr
   65     | Expr AND Expr
   66     | Expr BITWISEAND Expr
   67     | Expr BITWISEOR Expr
   68     | Expr BITWISEXOR Expr
   69     | Expr EQ Expr
   70     | Expr NE Expr
   71     | Expr LE Expr
   72     | Expr GE Expr
   73     | Expr LT Expr
   74     | Expr GT Expr
   75     | PLUS Expr
   76     | MINUS Expr
   77     | NOT Expr
   78     | IDENTIFIER LPAR Expr Expr3 RPAR
   79     | IDENTIFIER LPAR RPAR
   80     | IDENTIFIER
   81     | NATURAL
   82     | CHRLIT
   83     | DECIMAL
   84     | LPAR Expr2 RPAR
   85     | IDENTIFIER LPAR error RPAR
   86     | LPAR error RPAR

   87 Expr2: Expr
   88      | Expr2 COMMA Expr

   89 Expr3: ε
   90      | Expr3 COMMA Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 1 25 43 52 53 85 86
    CHAR (258) 28
    ELSE (259) 38 47
    WHILE (260) 40 49
    IF (261) 38 39 47 48
    INT (262) 29
    SHORT (263) 31
    DOUBLE (264) 32
    RETURN (265) 41 42 50 51
    VOID (266) 30
    BITWISEAND (267) 66
    BITWISEOR (268) 67
    BITWISEXOR (269) 68
    AND (270) 65
    ASSIGN (271) 34 58
    MUL (272) 61
    COMMA (273) 21 27 88 90
    DIV (274) 62
    EQ (275) 69
    GE (276) 72
    GT (277) 74
    LBRACE (278) 11 12 37 43 46 52
    LE (279) 71
    LPAR (280) 18 38 39 40 47 48 49 78 79 84 85 86
    LT (281) 73
    MINUS (282) 60 76
    MOD (283) 63
    NE (284) 70
    NOT (285) 77
    OR (286) 64
    PLUS (287) 59 75
    RBRACE (288) 11 12 37 43 46 52
    RPAR (289) 18 38 39 40 47 48 49 78 79 84 85 86
    SEMI (290) 17 24 25 35 36 41 42 44 45 50 51 53
    RESERVED (291)
    IDENTIFIER <v> (292) 18 23 33 34 78 79 80 85
    NATURAL <v> (293) 81
    DECIMAL <v> (294) 83
    CHRLIT <v> (295) 82
    UNARY (296)
    SUB (297)
    ADD (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    Program <no> (45)
        on left: 1 2
        on right: 0
    FunctionsAndDeclarations <no> (46)
        on left: 3 4 5
        on right: 2
    FunctionsAndDeclarations2 <no> (47)
        on left: 6 7 8 9
        on right: 3 4 5 7 8 9
    FunctionDefinition <no> (48)
        on left: 10
        on right: 3 7
    FunctionBody <no> (49)
        on left: 11 12
        on right: 10
    DeclarationsAndStatements <no> (50)
        on left: 13 14 15 16
        on right: 12 13 14
    FunctionDeclaration <no> (51)
        on left: 17
        on right: 4 8
    FunctionDeclarator <no> (52)
        on left: 18
        on right: 10 17
    ParameterList <no> (53)
        on left: 19
        on right: 18
    ParameterList2 <no> (54)
        on left: 20 21
        on right: 19 21
    ParameterDeclaration <no> (55)
        on left: 22 23
        on right: 19 21
    Declaration <no> (56)
        on left: 24 25
        on right: 5 9 14 16
    Declaration2 <no> (57)
        on left: 26 27
        on right: 24 27
    TypeSpec <no> (58)
        on left: 28 29 30 31 32
        on right: 10 17 22 23 24
    Declarator <no> (59)
        on left: 33 34
        on right: 26 27
    StatementsERROR <no> (60)
        on left: 35 36 37 38 39 40 41 42 43
        on right: 13 15
    StatementERROR <no> (61)
        on left: 44 45 46 47 48 49 50 51 52 53
        on right: 38 39 40 47 48 49 55 57
    Statement2 <no> (62)
        on left: 54 55
        on right: 37 46
    Statement3 <no> (63)
        on left: 56 57
        on right: 55 57
    Expr <no> (64)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 87 88 90
    Expr2 <no> (65)
        on left: 87 88
        on right: 34 36 38 39 40 41 45 47 48 49 50 84 88
    Expr3 <no> (66)
        on left: 89 90
        on right: 78 90


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

    1 Program: error •
   25 Declaration: error • SEMI

    SEMI  shift, and go to state 13

    $default  reduce using rule 1 (Program)


State 2

   28 TypeSpec: CHAR •

    $default  reduce using rule 28 (TypeSpec)


State 3

   29 TypeSpec: INT •

    $default  reduce using rule 29 (TypeSpec)


State 4

   31 TypeSpec: SHORT •

    $default  reduce using rule 31 (TypeSpec)


State 5

   32 TypeSpec: DOUBLE •

    $default  reduce using rule 32 (TypeSpec)


State 6

   30 TypeSpec: VOID •

    $default  reduce using rule 30 (TypeSpec)


State 7

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 8

    2 Program: FunctionsAndDeclarations •

    $default  reduce using rule 2 (Program)


State 9

    3 FunctionsAndDeclarations: FunctionDefinition • FunctionsAndDeclarations2

    error   shift, and go to state 15
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarations2)

    FunctionsAndDeclarations2  go to state 16
    FunctionDefinition         go to state 17
    FunctionDeclaration        go to state 18
    Declaration                go to state 19
    TypeSpec                   go to state 12


State 10

    4 FunctionsAndDeclarations: FunctionDeclaration • FunctionsAndDeclarations2

    error   shift, and go to state 15
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarations2)

    FunctionsAndDeclarations2  go to state 20
    FunctionDefinition         go to state 17
    FunctionDeclaration        go to state 18
    Declaration                go to state 19
    TypeSpec                   go to state 12


State 11

    5 FunctionsAndDeclarations: Declaration • FunctionsAndDeclarations2

    error   shift, and go to state 15
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarations2)

    FunctionsAndDeclarations2  go to state 21
    FunctionDefinition         go to state 17
    FunctionDeclaration        go to state 18
    Declaration                go to state 19
    TypeSpec                   go to state 12


State 12

   10 FunctionDefinition: TypeSpec • FunctionDeclarator FunctionBody
   17 FunctionDeclaration: TypeSpec • FunctionDeclarator SEMI
   24 Declaration: TypeSpec • Declaration2 SEMI

    IDENTIFIER  shift, and go to state 22

    FunctionDeclarator  go to state 23
    Declaration2        go to state 24
    Declarator          go to state 25


State 13

   25 Declaration: error SEMI •

    $default  reduce using rule 25 (Declaration)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

   25 Declaration: error • SEMI

    SEMI  shift, and go to state 13


State 16

    3 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarations2 •

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 17

    7 FunctionsAndDeclarations2: FunctionDefinition • FunctionsAndDeclarations2

    error   shift, and go to state 15
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarations2)

    FunctionsAndDeclarations2  go to state 26
    FunctionDefinition         go to state 17
    FunctionDeclaration        go to state 18
    Declaration                go to state 19
    TypeSpec                   go to state 12


State 18

    8 FunctionsAndDeclarations2: FunctionDeclaration • FunctionsAndDeclarations2

    error   shift, and go to state 15
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarations2)

    FunctionsAndDeclarations2  go to state 27
    FunctionDefinition         go to state 17
    FunctionDeclaration        go to state 18
    Declaration                go to state 19
    TypeSpec                   go to state 12


State 19

    9 FunctionsAndDeclarations2: Declaration • FunctionsAndDeclarations2

    error   shift, and go to state 15
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarations2)

    FunctionsAndDeclarations2  go to state 28
    FunctionDefinition         go to state 17
    FunctionDeclaration        go to state 18
    Declaration                go to state 19
    TypeSpec                   go to state 12


State 20

    4 FunctionsAndDeclarations: FunctionDeclaration FunctionsAndDeclarations2 •

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 21

    5 FunctionsAndDeclarations: Declaration FunctionsAndDeclarations2 •

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 22

   18 FunctionDeclarator: IDENTIFIER • LPAR ParameterList RPAR
   33 Declarator: IDENTIFIER •
   34           | IDENTIFIER • ASSIGN Expr2

    ASSIGN  shift, and go to state 29
    LPAR    shift, and go to state 30

    $default  reduce using rule 33 (Declarator)


State 23

   10 FunctionDefinition: TypeSpec FunctionDeclarator • FunctionBody
   17 FunctionDeclaration: TypeSpec FunctionDeclarator • SEMI

    LBRACE  shift, and go to state 31
    SEMI    shift, and go to state 32

    FunctionBody  go to state 33


State 24

   24 Declaration: TypeSpec Declaration2 • SEMI
   27 Declaration2: Declaration2 • COMMA Declarator

    COMMA  shift, and go to state 34
    SEMI   shift, and go to state 35


State 25

   26 Declaration2: Declarator •

    $default  reduce using rule 26 (Declaration2)


State 26

    7 FunctionsAndDeclarations2: FunctionDefinition FunctionsAndDeclarations2 •

    $default  reduce using rule 7 (FunctionsAndDeclarations2)


State 27

    8 FunctionsAndDeclarations2: FunctionDeclaration FunctionsAndDeclarations2 •

    $default  reduce using rule 8 (FunctionsAndDeclarations2)


State 28

    9 FunctionsAndDeclarations2: Declaration FunctionsAndDeclarations2 •

    $default  reduce using rule 9 (FunctionsAndDeclarations2)


State 29

   34 Declarator: IDENTIFIER ASSIGN • Expr2

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr   go to state 44
    Expr2  go to state 45


State 30

   18 FunctionDeclarator: IDENTIFIER LPAR • ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 46
    ParameterDeclaration  go to state 47
    TypeSpec              go to state 48


State 31

   11 FunctionBody: LBRACE • RBRACE
   12             | LBRACE • DeclarationsAndStatements RBRACE

    error       shift, and go to state 15
    CHAR        shift, and go to state 2
    WHILE       shift, and go to state 49
    IF          shift, and go to state 50
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    RETURN      shift, and go to state 51
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 52
    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    RBRACE      shift, and go to state 53
    SEMI        shift, and go to state 54
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    DeclarationsAndStatements  go to state 55
    Declaration                go to state 56
    TypeSpec                   go to state 57
    StatementsERROR            go to state 58
    Expr                       go to state 44
    Expr2                      go to state 59


State 32

   17 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI •

    $default  reduce using rule 17 (FunctionDeclaration)


State 33

   10 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody •

    $default  reduce using rule 10 (FunctionDefinition)


State 34

   27 Declaration2: Declaration2 COMMA • Declarator

    IDENTIFIER  shift, and go to state 60

    Declarator  go to state 61


State 35

   24 Declaration: TypeSpec Declaration2 SEMI •

    $default  reduce using rule 24 (Declaration)


State 36

   84 Expr: LPAR • Expr2 RPAR
   86     | LPAR • error RPAR

    error       shift, and go to state 62
    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr   go to state 44
    Expr2  go to state 63


State 37

   76 Expr: MINUS • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 64


State 38

   77 Expr: NOT • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 65


State 39

   75 Expr: PLUS • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 66


State 40

   78 Expr: IDENTIFIER • LPAR Expr Expr3 RPAR
   79     | IDENTIFIER • LPAR RPAR
   80     | IDENTIFIER •
   85     | IDENTIFIER • LPAR error RPAR

    LPAR  shift, and go to state 67

    $default  reduce using rule 80 (Expr)


State 41

   81 Expr: NATURAL •

    $default  reduce using rule 81 (Expr)


State 42

   83 Expr: DECIMAL •

    $default  reduce using rule 83 (Expr)


State 43

   82 Expr: CHRLIT •

    $default  reduce using rule 82 (Expr)


State 44

   58 Expr: Expr • ASSIGN Expr
   59     | Expr • PLUS Expr
   60     | Expr • MINUS Expr
   61     | Expr • MUL Expr
   62     | Expr • DIV Expr
   63     | Expr • MOD Expr
   64     | Expr • OR Expr
   65     | Expr • AND Expr
   66     | Expr • BITWISEAND Expr
   67     | Expr • BITWISEOR Expr
   68     | Expr • BITWISEXOR Expr
   69     | Expr • EQ Expr
   70     | Expr • NE Expr
   71     | Expr • LE Expr
   72     | Expr • GE Expr
   73     | Expr • LT Expr
   74     | Expr • GT Expr
   87 Expr2: Expr •

    BITWISEAND  shift, and go to state 68
    BITWISEOR   shift, and go to state 69
    BITWISEXOR  shift, and go to state 70
    AND         shift, and go to state 71
    ASSIGN      shift, and go to state 72
    MUL         shift, and go to state 73
    DIV         shift, and go to state 74
    EQ          shift, and go to state 75
    GE          shift, and go to state 76
    GT          shift, and go to state 77
    LE          shift, and go to state 78
    LT          shift, and go to state 79
    MINUS       shift, and go to state 80
    MOD         shift, and go to state 81
    NE          shift, and go to state 82
    OR          shift, and go to state 83
    PLUS        shift, and go to state 84

    $default  reduce using rule 87 (Expr2)


State 45

   34 Declarator: IDENTIFIER ASSIGN Expr2 •
   88 Expr2: Expr2 • COMMA Expr

    $default  reduce using rule 34 (Declarator)


State 46

   18 FunctionDeclarator: IDENTIFIER LPAR ParameterList • RPAR

    RPAR  shift, and go to state 86


State 47

   19 ParameterList: ParameterDeclaration • ParameterList2

    COMMA  shift, and go to state 87

    $default  reduce using rule 20 (ParameterList2)

    ParameterList2  go to state 88


State 48

   22 ParameterDeclaration: TypeSpec •
   23                     | TypeSpec • IDENTIFIER

    IDENTIFIER  shift, and go to state 89

    $default  reduce using rule 22 (ParameterDeclaration)


State 49

   40 StatementsERROR: WHILE • LPAR Expr2 RPAR StatementERROR

    LPAR  shift, and go to state 90


State 50

   38 StatementsERROR: IF • LPAR Expr2 RPAR StatementERROR ELSE StatementERROR
   39                | IF • LPAR Expr2 RPAR StatementERROR

    LPAR  shift, and go to state 91


State 51

   41 StatementsERROR: RETURN • Expr2 SEMI
   42                | RETURN • SEMI

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    SEMI        shift, and go to state 92
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr   go to state 44
    Expr2  go to state 93


State 52

   37 StatementsERROR: LBRACE • Statement2 RBRACE
   43                | LBRACE • error RBRACE

    error       shift, and go to state 94
    WHILE       shift, and go to state 95
    IF          shift, and go to state 96
    RETURN      shift, and go to state 97
    LBRACE      shift, and go to state 98
    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    SEMI        shift, and go to state 99
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    RBRACE  reduce using rule 54 (Statement2)

    StatementERROR  go to state 100
    Statement2      go to state 101
    Expr            go to state 44
    Expr2           go to state 102


State 53

   11 FunctionBody: LBRACE RBRACE •

    $default  reduce using rule 11 (FunctionBody)


State 54

   35 StatementsERROR: SEMI •

    $default  reduce using rule 35 (StatementsERROR)


State 55

   12 FunctionBody: LBRACE DeclarationsAndStatements • RBRACE

    RBRACE  shift, and go to state 103


State 56

   14 DeclarationsAndStatements: Declaration • DeclarationsAndStatements
   16                          | Declaration •

    error       shift, and go to state 15
    CHAR        shift, and go to state 2
    WHILE       shift, and go to state 49
    IF          shift, and go to state 50
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    RETURN      shift, and go to state 51
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 52
    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    SEMI        shift, and go to state 54
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    RBRACE  reduce using rule 16 (DeclarationsAndStatements)

    DeclarationsAndStatements  go to state 104
    Declaration                go to state 56
    TypeSpec                   go to state 57
    StatementsERROR            go to state 58
    Expr                       go to state 44
    Expr2                      go to state 59


State 57

   24 Declaration: TypeSpec • Declaration2 SEMI

    IDENTIFIER  shift, and go to state 60

    Declaration2  go to state 24
    Declarator    go to state 25


State 58

   13 DeclarationsAndStatements: StatementsERROR • DeclarationsAndStatements
   15                          | StatementsERROR •

    error       shift, and go to state 15
    CHAR        shift, and go to state 2
    WHILE       shift, and go to state 49
    IF          shift, and go to state 50
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    RETURN      shift, and go to state 51
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 52
    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    SEMI        shift, and go to state 54
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    RBRACE  reduce using rule 15 (DeclarationsAndStatements)

    DeclarationsAndStatements  go to state 105
    Declaration                go to state 56
    TypeSpec                   go to state 57
    StatementsERROR            go to state 58
    Expr                       go to state 44
    Expr2                      go to state 59


State 59

   36 StatementsERROR: Expr2 • SEMI
   88 Expr2: Expr2 • COMMA Expr

    COMMA  shift, and go to state 85
    SEMI   shift, and go to state 106


State 60

   33 Declarator: IDENTIFIER •
   34           | IDENTIFIER • ASSIGN Expr2

    ASSIGN  shift, and go to state 29

    $default  reduce using rule 33 (Declarator)


State 61

   27 Declaration2: Declaration2 COMMA Declarator •

    $default  reduce using rule 27 (Declaration2)


State 62

   86 Expr: LPAR error • RPAR

    RPAR  shift, and go to state 107


State 63

   84 Expr: LPAR Expr2 • RPAR
   88 Expr2: Expr2 • COMMA Expr

    COMMA  shift, and go to state 85
    RPAR   shift, and go to state 108


State 64

   58 Expr: Expr • ASSIGN Expr
   59     | Expr • PLUS Expr
   60     | Expr • MINUS Expr
   61     | Expr • MUL Expr
   62     | Expr • DIV Expr
   63     | Expr • MOD Expr
   64     | Expr • OR Expr
   65     | Expr • AND Expr
   66     | Expr • BITWISEAND Expr
   67     | Expr • BITWISEOR Expr
   68     | Expr • BITWISEXOR Expr
   69     | Expr • EQ Expr
   70     | Expr • NE Expr
   71     | Expr • LE Expr
   72     | Expr • GE Expr
   73     | Expr • LT Expr
   74     | Expr • GT Expr
   76     | MINUS Expr •

    $default  reduce using rule 76 (Expr)


State 65

   58 Expr: Expr • ASSIGN Expr
   59     | Expr • PLUS Expr
   60     | Expr • MINUS Expr
   61     | Expr • MUL Expr
   62     | Expr • DIV Expr
   63     | Expr • MOD Expr
   64     | Expr • OR Expr
   65     | Expr • AND Expr
   66     | Expr • BITWISEAND Expr
   67     | Expr • BITWISEOR Expr
   68     | Expr • BITWISEXOR Expr
   69     | Expr • EQ Expr
   70     | Expr • NE Expr
   71     | Expr • LE Expr
   72     | Expr • GE Expr
   73     | Expr • LT Expr
   74     | Expr • GT Expr
   77     | NOT Expr •

    $default  reduce using rule 77 (Expr)


State 66

   58 Expr: Expr • ASSIGN Expr
   59     | Expr • PLUS Expr
   60     | Expr • MINUS Expr
   61     | Expr • MUL Expr
   62     | Expr • DIV Expr
   63     | Expr • MOD Expr
   64     | Expr • OR Expr
   65     | Expr • AND Expr
   66     | Expr • BITWISEAND Expr
   67     | Expr • BITWISEOR Expr
   68     | Expr • BITWISEXOR Expr
   69     | Expr • EQ Expr
   70     | Expr • NE Expr
   71     | Expr • LE Expr
   72     | Expr • GE Expr
   73     | Expr • LT Expr
   74     | Expr • GT Expr
   75     | PLUS Expr •

    MUL    shift, and go to state 73
    DIV    shift, and go to state 74
    MINUS  shift, and go to state 80

    $default  reduce using rule 75 (Expr)


State 67

   78 Expr: IDENTIFIER LPAR • Expr Expr3 RPAR
   79     | IDENTIFIER LPAR • RPAR
   85     | IDENTIFIER LPAR • error RPAR

    error       shift, and go to state 109
    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    RPAR        shift, and go to state 110
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 111


State 68

   66 Expr: Expr BITWISEAND • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 112


State 69

   67 Expr: Expr BITWISEOR • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 113


State 70

   68 Expr: Expr BITWISEXOR • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 114


State 71

   65 Expr: Expr AND • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 115


State 72

   58 Expr: Expr ASSIGN • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 116


State 73

   61 Expr: Expr MUL • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 117


State 74

   62 Expr: Expr DIV • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 118


State 75

   69 Expr: Expr EQ • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 119


State 76

   72 Expr: Expr GE • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 120


State 77

   74 Expr: Expr GT • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 121


State 78

   71 Expr: Expr LE • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43

    Expr  go to state 122


State 79

   73 Expr: Expr LT • Expr

    LPAR        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    PLUS        shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    NATURAL     shift, and go to state 41
    DECIMAL     shift, and go to state 42
    CHRLIT      shift, and go to state 43
